# HPythia8-generate

./: HPythia8-generate.cabal  HPythia8.conf
exe/: Command.hs  HPythia8-generate.hs  Helpers.hs
lib/Pythia8/: Desc.hs
lib/Pythia8/Desc/: Annotate.hs  Module.hs
template/: HPythia8.cabal.st
